--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,7 +4,7 @@
 .footer {
     margin-top: 1.5rem;
     padding: 0.5rem;
-    width: 100vw;
+    width: 100%;
     box-sizing: border-box;
     text-align: center;
     background-color: $logo-color;
