--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
     padding-top: 2vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
