--- a/src/Components/HomePage/TitlePage/TitlePage.scss
+++ b/src/Components/HomePage/TitlePage/TitlePage.scss
@@ -2,7 +2,7 @@
 @import '../../../style/breakpoints.scss';
 
 .title-page {
-    width: 100vw;
+    width: 100%;
     height: 50vw;
     background-image: linear-gradient(#F2F2F2, transparent 50%), url('../../../images/house.jpg');
     background-position: center;
